crates/mockiato-compiletest/tests/ui/malformed_remote_param_in_mockable_attr.rs
use mockiato::mockable;

#[mockable(remote = 1)]
trait NotAStringLiteral {}

#[mockable(remote = "foo", remote = "bar")]
trait SpecifiedMoreThanOnce {}

#[mockable(remote = "foo?")]
trait InvalidPath {}

fn main() {}
